<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Order</string>
    <!--Header text for the toppings [CHAR LIMIT = 12]-->


    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>

    <string name="toppings">Toppings</string>
    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=5] -->
    <string name="initial_quantity_value">2</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="order">Order</string>

    <!--Name format for the order summary. It will be shown in the format of "Name: Karthik"  where "Karthik" is the user's name. [CHAR LIMIT=NONE]-->
    <string name="order_summary_name">Name:<xliff:g example="Karthik" id="name">%s</xliff:g></string>
    <!--display "yes" as an answer to any question-->
    <string name="yes">Yes</string>
    <!--display "no" as an answer to any question-->
    <string name="no">No</string>
    <!-- Whipped Cream for the order summary. Displays in the format "Add Whipped Cream?Yes"[CHAR LIMIT=NONE]-->
    <string name="order_summary_extra_cheese">Add Extra Cheese? <xliff:g example="yes" id="addWhippedCream">%s</xliff:g></string>
    <!-- Chocolate for the order summary. Displays in the format "Add Chocolate? Yes"[CHAR LIMIT=NONE]-->
    <string name="order_summary_chicken">Add chicken? <xliff:g example="yes" id="addChocolate">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_summary_total_price">Total: $ <xliff:g example="10" id="price">%.2f</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="too_much_coffee">Please select less than one hundred cups of coffee</string>
    <string name="too_little_coffee">Please select atleast one cup of coffee</string>
    <string name="Extra_Cheese">Extra Cheese</string>
    <string name="Chicken">Chicken</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_summary">summary</string>
    <string name="textview">TextView</string>
    <string name="title_activity_summ">summ</string>
    <string name="textview">TextView</string>
</resources>