<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.karthik.myorder.MainActivity">

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:hint="Name"
            android:inputType="textCapWords" />
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            />

        <CheckBox
            android:id="@+id/extraCheese_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/Extra_Cheese"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chicken_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/Chicken"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"

            android:text="@string/quantity"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"

                android:text="-"

                />


            <TextView
                android:id="@+id/quantity_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"

                android:text="@string/initial_quantity_value"

                android:textColor="#000000" />

            <Button

                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:layout_marginBottom="16sp"


                android:text="+"


                />

        </LinearLayout>


        <Button
            android:id="@+id/order"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="Order" />

        <EditText
            android:id="@+id/user_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email Id"
            android:inputType="textEmailAddress" />

        <Button
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="send"
            android:onClick="submitSummary"/>

    </LinearLayout>

</ScrollView>

